// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AirglowPrefabIntegrationTest should call the reducer when the text changes 1`] = `
"<App>
  <Airglow store={[Function]} plugins={{...}}>
    <StoreProvider store={{...}}>
      <AirglowWrapper config={{...}}>
        <Component>
          <TestComponent color=\\"Purple!\\" onColor={[Function: onColor]}>
            <input value=\\"Purple!\\" onChange={[Function: onChange]} />
          </TestComponent>
        </Component>
      </AirglowWrapper>
    </StoreProvider>
  </Airglow>
</App>"
`;

exports[`AirglowPrefabIntegrationTest should render with default values 1`] = `
"<App>
  <Airglow store={[Function]} plugins={{...}}>
    <StoreProvider store={{...}}>
      <AirglowWrapper config={{...}}>
        <Component>
          <TestComponent color=\\"\\" onColor={[Function: onColor]}>
            <input value=\\"\\" onChange={[Function: onChange]} />
          </TestComponent>
        </Component>
      </AirglowWrapper>
    </StoreProvider>
  </Airglow>
</App>"
`;
